--- a/Provesi/templates/base.html
+++ b/Provesi/templates/base.html
@@ -1,21 +1,35 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
+        {% load bootstrap5 %}
+        {% bootstrap_css %}
+        {% bootstrap_javascript %}
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         {% block head %}
         <title>WMS Provesi</title>
         {% endblock %}
     </head>
     <body>
+        <div class="container">
+            <ul class="nav bg-info">
+                <li class="nav-item">
+                    <a class="nav-link link-light" href="/">Inicio</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link-light" href="/producto">Registrar Producto</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link link-light" href="/inventario">Inventario</a>
+                </li>
+            </ul>
+
+        </div>
         <br>
-        {% extends 'navbar.html' %}
         <main>
-          <div class="container" style="min-height: 580px;">
-          {% block content %}
-          {% endblock %}
-          </div>
+            <div class="container" style="min-height: 580px;">
+                {% block content %}
+                {% endblock %}
+            </div>
         </main>
 
     </body>
