--- a/Provesi/templates/base.html
+++ b/Provesi/templates/base.html
@@ -16,10 +16,10 @@
                     <a class="nav-link link-light" href="/">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link-light" href="/producto">Registrar Producto</a>
+                    <a class="nav-link link-light" href="/inventario/producto">Registrar Producto</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link link-light" href="/inventario">Inventario</a>
+                    <a class="nav-link link-light" href="/inventario/inventario">Inventario</a>
                 </li>
             </ul>
 
