--- a/Users/templates/Usuario/usuarioCreate.html
+++ b/Users/templates/Usuario/usuarioCreate.html
@@ -1,12 +1,12 @@
 {% extends 'base.html' %}
 {% block content %}
 <form method="POST">
-    {% csrf_token %}
     <br>
-    {{ form.as_p }}
+    {% csrf_token %}
+    {{form}}
     <button type="submit" class="btn btn-success waves-effect waves-light">Create</button>
     <button type="button" class="btn btn-primary waves-effect waves-light"
-                                onClick=" window.location.href='/variables' ">Back
+                                onClick=" window.location.href='' ">Back
     </button>
 </form>
 {% endblock %}
