--- a/Inventario/templates/Bodega/bodega.html
+++ b/Inventario/templates/Bodega/bodega.html
@@ -1,23 +1,34 @@
 {% extends 'base.html' %}
 
-{% block title %}Lista de Bodegas{% endblock %}
+{% block title %}
+  {% if rol == "JefeBodega" or rol == "Operario" %}
+    Lista de Bodegas
+  {% else %}
+    Acceso Denegado
+  {% endif %}
+{% endblock %}
 
 {% block content %}
-  <h2>Bodegas</h2>
-  <div class="container">
-    <div class="row">
-      {% for bodega in bodegas %}
-        <div class="col-md-4 mb-4">
-          <div class="card h-100">
-            <div class="card-body">
-              <h5 class="card-title">{{ bodega.ciudad }}</h5>
-              <p class="card-text">{{ bodega.direccion }}</p>
-              <a href="#" class="btn btn-primary">Ver inventario</a>
-              <a href="#" class="btn btn-secondary">Agregar producto</a>
+  {% if rol == "JefeBodega" or rol == "Operario" %}
+    <h2>Bodegas</h2>
+    <div class="container">
+      <div class="row">
+        {% for bodega in bodegas %}
+          <div class="col-md-4 mb-4">
+            <div class="card h-100">
+              <div class="card-body">
+                <h5 class="card-title">{{ bodega.ciudad }}</h5>
+                <p class="card-text">{{ bodega.direccion }}</p>
+                <a href="#" class="btn btn-primary">Ver inventario</a>
+                <a href="#" class="btn btn-secondary">Agregar producto</a>
+              </div>
             </div>
           </div>
-        </div>
-      {% endfor %}
+        {% endfor %}
+      </div>
     </div>
-  </div>
+  {% else %}
+    <h2>Acceso Denegado</h2>
+    <p>No tienes permiso para ver esta página.</p>
+  {% endif %}
 {% endblock %}
