--- a/Provesi/templates/base.html
+++ b/Provesi/templates/base.html
@@ -21,7 +21,14 @@
                 <li class="nav-item">
                     <a class="nav-link link-light" href="/inventario/inventario">Inventario</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link link-light" href="/inventario/bodega">Bodegas</a>
+                </li>
+
+                <li class="nav-item">
+                    <h5 class="nav-link link-light">Usuario: {% if user.is_authenticated %} {{ user.nombre }} {{ user.apellido }} - Rol: {{ user.rol }} {% else %} Invitado {% endif %}</h5>
             </ul>
+
 
         </div>
         <br>
