--- a/Provesi/templates/home.html
+++ b/Provesi/templates/home.html
@@ -1,8 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-
-    <div style=" display: flex; align-items: center; justify-content: center;" class="login-box auth0-box before">
-            hola
-    </div>
-
+<div class="container text-center mt-5">
+    <h2 class="mb-3">Bienvenido al WMS de Provesi</h2>
+    <p class="mb-4">Por favor, inicie sesión para continuar.</p>
+    <a href="/usuarios/login/" class="btn btn-primary">Iniciar Sesión</a>
+</div>
 {% endblock %}
