--- a/Inventario/templates/Bodega/bodega.html
+++ b/Inventario/templates/Bodega/bodega.html
@@ -14,13 +14,14 @@
     <div class="container">
       <div class="row">
         {% for bodega in bodegas %}
-          <div class="col-md-4 mb-4">
-            <div class="card h-100">
+          <div class="col-md-5 mb-4">
+            <div class="card">
               <div class="card-body">
                 <h5 class="card-title">{{ bodega.ciudad }}</h5>
                 <p class="card-text">{{ bodega.direccion }}</p>
-                <a href="#" class="btn btn-primary">Ver inventario</a>
-                <a href="#" class="btn btn-secondary">Agregar producto</a>
+                <a href="#" class="btn btn-success color">Ver inventario</a>
+                <a href="#" class="btn btn-primary color">Ver productos</a>
+                <a href="#" class="btn btn-secondary color">Agregar producto</a>
               </div>
             </div>
           </div>
