--- a/Users/templates/Usuario/usuarioCreate.html
+++ b/Users/templates/Usuario/usuarioCreate.html
@@ -1,12 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
-<form method="POST">
-    <br>
-    {% csrf_token %}
-    {{form.as_p}}
-    <button type="submit" class="btn btn-success waves-effect waves-light">Create</button>
-    <button type="button" class="btn btn-primary waves-effect waves-light"
-                                onClick=" window.location.href='' ">Back
-    </button>
-</form>
+<div class="row justify-content-center">
+    <div class="col-md-8 col-lg-6">
+        <div class="card shadow">
+            <div class="card-header text-center bg-success text-white">
+                <h4 class="mb-0">Crear Usuario</h4>
+            </div>
+            <div class="card-body">
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-success">Crear Usuario</button>
+                        <button type="button" class="btn btn-outline-secondary" onClick="window.location.href='/'">Volver</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
