--- a/Users/templates/Usuario/usuarioLogin.html
+++ b/Users/templates/Usuario/usuarioLogin.html
@@ -1,11 +1,22 @@
 {% extends 'base.html' %}
 {% block content %}
-<form method="POST">
-    <h2>Iniciar Sesión</h2>
-    {% csrf_token %}
-    {{ form.as_p }}
-    <div class="card">
-    <button type="submit" class="btn btn-success">Iniciar Sesión</button>
-    <button type="button" class="btn btn-primary" onClick="window.location.href=''">Volver</button>
-</form>
+<div class="row justify-content-center">
+    <div class="col-md-6 col-lg-4">
+        <div class="card shadow">
+            <div class="card-header text-center bg-primary text-white">
+                <h4 class="mb-0">Iniciar Sesión</h4>
+            </div>
+            <div class="card-body">
+                <form method="POST">
+                    {% csrf_token %}
+                    {{ form.as_p }}
+                    <div class="d-grid gap-2">
+                        <button type="submit" class="btn btn-success">Iniciar Sesión</button>
+                        <button type="button" class="btn btn-outline-secondary" onClick="window.location.href='/'">Volver</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+</div>
 {% endblock %}
