--- a/Provesi/templates/base.html
+++ b/Provesi/templates/base.html
@@ -25,7 +25,7 @@
                         <a class="nav-link fw-semibold" href="/inventario/producto/crear">Registrar Producto</a>
                     </li>
                     <li class="nav-item me-4">
-                        <a class="nav-link fw-semibold" href="/inventario/inventario">Inventario</a>
+                        <a class="nav-link fw-semibold" href="/inventario">Inventario</a>
                     </li>
                     <li class="nav-item me-4">
                         <a class="nav-link fw-semibold" href="/inventario/bodegas/">Bodegas</a>
